Fix icon SVG width for better alignment in iconStyles.css

--- a/Frontend/src/components/Icons/iconStyles.css
+++ b/Frontend/src/components/Icons/iconStyles.css
@@ -10,7 +10,7 @@
 
   svg {
     position: absolute;
-    width: 100%;
+    width: 102%;
   }
 
   &.ok {
